# pyticker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: config.py  database.py  factory.py  main.py
app/api/middlewares/: auth.py
app/api/routes/: users.py  utils.py
app/models/: db.py  requests.py
migrations/: env.py
migrations/versions/: bc07716fd13e_create_users_table.py
tests/routes/: test_utils.py
