[tool.poetry]
name = "fastapi-microservice-template"
version = "0.1.0"
description = ""
authors = ["stefanFramework <cesar_cappetto@yahoo.com.ar>"]
readme = "README.md"
packages = [
    { include = "app" }
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "2.32.3"
fastapi = "0.115.11"
uvicorn = {extras = ["standard"], version = "^0.34.0"}
sqlmodel = "^0.0.24"
pydantic = "^2.10.6"
pydantic-settings = "^2.8.1"
alembic = "^1.15.1"
python-json-logger = "2.0.1"
python-dotenv = "1.0.1"
psycopg2 = "^2.9.9"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.5"